--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@ comments: false
                   <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                 </h3>
                 <p class="repo-list-description">
-                {{ post.excerpt | strip_html | strip }}
+                {% if post.description %}
+                    {{ post.description | strip_html | strip }}
+                {% else %}                    
+                    {{ post.excerpt | strip_html | strip }}
+                {% endif %}
                 </p>
                 <p class="repo-list-meta">
                 <span class="meta-info">
