--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ comments: false
                   <span class="octicon octicon-mark-github"></span>
                   <a href="https://github.com/{{ site.github_username }}" target="_blank">{{ site.github_username }}</a>
                 </span>
+                <span class="meta-info">
+                  <span class="octicon octicon-organization"></span>
+                  <a href="{{ site.organization_url }}" target="_blank">{{ site.data.words | size }}</a>
+                </span>
               </div>
             </div>
           </div>
