--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ comments: false
                 </span>
                 <span class="meta-info">
                   <span class="octicon octicon-organization"></span>
-                  <a href="{{ site.organization_url }}" target="_blank">{{ site.data.words | size }}</a>
+                  {% assign wordsLen = site.data.words | size %}
+                  {% assign randInd = "now" | date: "%N" | modulo: wordsLen %}
+                  <a>{{ site.data.words[randInd] }}</a>
                 </span>
               </div>
             </div>
