--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ comments: false
                   <span class="octicon octicon-mark-github"></span>
                   <a href="https://github.com/{{ site.github_username }}" target="_blank">{{ site.github_username }}</a>
                 </span>
+              </div>
+              <div class="collection-info">                
                 <span class="meta-info">
                   <span class="octicon octicon-organization"></span>
                   {% assign wordsLen = site.data.words | size %}
