--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ comments: false
               </div>
               <div class="collection-info">                
                 <span class="meta-info">
-                  <span class="octicon octicon-organization"></span>
+                  <span class="octicon octicon-light-bulb"></span>
                   {% assign wordsLen = site.data.words | size %}
                   {% assign randInd = "now" | date: "%N" | modulo: wordsLen %}
                   <a>{{ site.data.words[randInd] }}</a>
