--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ function randSentence() {
                 </span>
                 <span class="meta-info">
                   <span class="octicon octicon-light-bulb"></span>
-                  <a><script src="randSentence()"></script></a>
+                  <a id="sentence"></a>
+                  <script src="document.getElementById("sentence").innerHTML = randSentence()"></script>
                 </span>
               </div>
             </div>
