--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ function randSentence() {
                 <span class="meta-info">
                   <span class="octicon octicon-light-bulb"></span>
                   <a id="sentence"></a>
-                  <script src="document.getElementById("sentence").innerHTML = randSentence()"></script>
+                  <script src="document.getElementById('sentence').innerHTML = randSentence()"></script>
                 </span>
               </div>
             </div>
