--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ comments: false
 var words = [
     '{{ site.data.words | join: "','" }}'
 ];
+var cur_word_ind = -1;
 function randInd(n) {
     return Math.floor(Math.random() * n);
 }
@@ -15,8 +16,13 @@ function randSentence(words) {
     return words[randInd(words.length)];
 }
 function randSentenceTimer() {
-    document.getElementById('sentence').innerHTML = randSentence(words);
-    window.setTimeout(randSentenceTimer, 5000);
+    var next_word_ind = randInd(words.length);
+    while (cur_word_ind == next_word_ind) {
+        next_word_ind = randInd(words.length);
+    }
+    cur_word_ind = next_word_ind;
+    document.getElementById('sentence').innerHTML = words[cur_word_ind];
+    window.setTimeout(randSentenceTimer, 3000);
 }
 </script>
 
