--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function randSentenceTimer() {
         next_word_ind = randInd(words.length);
     }
     cur_word_ind = next_word_ind;
-    showSentenceTimer('sentence', words[cur_word_ind], randSentenceTimer);
+    showSentenceTimer(words[cur_word_ind], randSentenceTimer);
     //document.getElementById('sentence').innerHTML = words[cur_word_ind];
     // window.setTimeout(randSentenceTimer, 3000);
 }
