--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function shuffleArray(array) {
 
 function randSentenceTimer() {
     if(cur_word_ind == words.length) {
-        cur_word_ind == 0;
+        cur_word_ind = 0;
     }
     if(cur_word_ind == 0) {
         shuffleArray(words);
